# dg4-s1

./: .gitignore  README.md
data/: .gitignore  README.md
data/open3d_parameters/: test_depth.npy  test_parameters.json
demo_notebooks/adjustment/: signal_adjustment.ipynb  viewpoints_extraction.ipynb
demo_notebooks/depth_matching/: main.ipynb
demo_notebooks/geopose3k/: geopose3k_01_download.ipynb  geopose3k_02_viewpoints_extraction.ipynb  geopose3k_03_azimuth_estimation.ipynb
demo_notebooks/georefcam/: correct_ypr.ipynb  ctcamera_asciigriddem.ipynb  multiray_cast_experiment.ipynb  simplecam_eiodem.ipynb
demo_notebooks/open3d/: skyline_top_view.ipynb  unproject.ipynb  visualize_terrain.ipynb
georefcam/: README.md  df_annotations.csv  pyproject.toml  requirements.txt
georefcam/demo_notebooks/: correct_ypr.ipynb  ctcamera_asciigriddem.ipynb  multiray_cast_experiment.ipynb  simplecam_eiodem.ipynb
georefcam/georefcam/: camera_model.py  data_types.py  dem.py  georefcam.py
horizon/: .gitignore  README.md  pyproject.toml  requirements.txt
horizon/horizon/: adjustment.py  camera.py  load.py  signal.py
lidar/: geopose3k_download.ipynb  signal_adjustment.ipynb  viewpoints_extraction.ipynb  visualize_terrain.ipynb
lidar/data/horizon/: brison.npy  brison_depth.npy  cabanelle.npy  cabanelle_depth.npy  courmettes.npy  courmettes_depth.npy  ferion.npy  ferion_depth.npy  marguerite.npy  marguerite_depth.npy  st_peray.npy  st_peray_depth.npy  valbonne.npy  valbonne_depth.npy
lidar/tools/: adjustment.py  camera.py  image.py  load.py  project.py  signal.py
(+1 files in other folders)
