[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "horizon"
authors = [{name = "Nicolas Denier"}]
license = {text = "Apache-2.0"}
version = "0.0.0"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
